# holoscan-mnist-test

./: CMakeLists.txt  README.md  inference.cpp  inference.hpp  inference_app.py  mnist_app.cpp  mnist_converter.py  mnist_profile.nsys-rep  mnist_profile.sqlite  profiler.hpp
